[tool.poetry]
name = "mk-clients"
version = "0.1.0"
description = ""
authors = ["Egor <ekurlenko17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
peewee = "^3.17.1"
aiogram = "^3.3.0"
pymysql = "^1.1.0"
cryptography = "^42.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
